welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:7: error: not found: value m
	 i==m
            ^indexOfMaxValue:9: error: not found: value m
	 return m	
                ^indexOfMaxValue:4: error: type mismatch;
 found   : Unit
 required: Int
	 for (i <- 1 to nums.length-1) {
                ^